# react-native-device-security

./: .eslintrc.js  .gitignore  .npmignore  COPY_TO_NEW_FOLDER.sh  EXAMPLES.md  INTEGRATION_GUIDE.md  LICENSE  MOVE_TO_STANDALONE_REPO.md  QUICK_START_STANDALONE.md  README.md  package-lock.json  package.json  react-native-device-defense.podspec  react-native-device-security.podspec  tsconfig.build.json  tsconfig.json
android/: build.gradle  proguard-rules.pro  test-gradle.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  device-security.cpp
android/src/main/java/com/devicedefense/: DebugDetection.kt  DeviceSecurityModule.kt  DeviceSecurityPackage.kt  EmulatorDetection.kt  HookDetection.kt  NativeSecurityCheck.kt  RootDetection.kt
android/src/main/java/vn/osp/security/: DebugDetection.kt  DeviceSecurityModule.kt  DeviceSecurityPackage.kt  EmulatorDetection.kt  HookDetection.kt  NativeSecurityCheck.kt  RootDetection.kt
scripts/: setup-standalone.ps1  setup-standalone.sh
src/: NativeDeviceSecurity.ts  api.ts  index.ts  types.ts
src/components/: SecurityBlockedScreen.tsx  index.ts
src/hooks/: index.ts  useDeviceSecurity.ts
